Fix alignment of blog meta data.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -162,8 +162,8 @@
 
     .blog-meta {
         @include offset(10);
-
-        top: 100px;
+        
+        margin-left: -20px;
         img {
             margin: 6px 0 4px;
         }
